--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 mysql-url: "localhost"
 mysql-user: "root"
-mysql-password: "root_password"
+mysql-password: ""
 mysql-port: "3306"
 mysql-database: "test_db"
